--- a/manual/add_private_message_group.html
+++ b/manual/add_private_message_group.html
@@ -28,7 +28,7 @@
 
   <tr>
     <td class=content>
-      Unlike ordinary message groups which members' number is unlimited, private group is for two persons only, i.e. Each private group contains one group
+      Unlike ordinary message groups which number of member is unlimited, private group is for two persons only, i.e. Each private group contains one group
       creator and one member.<br>
       <br>
       To create a new privat message group, click item 'Add Private Group' on the main menu. Screen like figure 3.2.1 will be shown.<br>
@@ -71,7 +71,7 @@
       <tr>
         <td width=15px valign=top class=content>- </td>
         <td class=content>
-          Decide whether group messages should be deleted automatically in a pre-defined period (in minutes) after message is read. Default value is 'On',
+          Decide whether group messages should be deleted automatically in a pre-defined period (in minutes) after a message is read. Default value is 'On',
           that means 'Yes' and default message deletion period is 1 minute. You may change the message deletion period from 1 minute to 30 minutes. However,
           if you select 'Off' on 'Auto delete read message', it doesn't mean the messages on your private group could be preserved forever until you delete
           them manually. No, it is not. If you select 'Off', your messages deletion period will be passed control to follow system setting 'old_msg_delete_days'.
