--- a/manual/change_alias.html
+++ b/manual/change_alias.html
@@ -32,7 +32,7 @@
       one user, even for those inactive users. And most important, anyone want to invit you to join a message group, he/she must know your alias. See
       section 3.1 and 3.2 of message group creation for details.<br>
       <br>
-      Alias is part of SMS user account as you join, but you can change it if you want, of course rule of uniqueness must be compliance. Click on link
+      Alias is part of SMS user account as you join in, but you can change it if you want, of course rule of uniqueness must be compliance. Click on link
       'Alias' of main menu, figure 2.2.1 will be seen, input your desired new alias, and click the 'Save' button to update your alias. However, if the
       alias you input has already existed, error message will be displayed, and you need to provide another alias. 
     </td>
