--- a/manual/change_email.html
+++ b/manual/change_email.html
@@ -29,9 +29,9 @@
   <tr>
     <td class=content>
       According to connection mode, email address may not be an essential data. However, it is always better to have it on your SMS user profile. Since
-      connection mode may be changed later to mode 0 or 3, all SMS user without email address can't be login to the SMS anymore. To input or change your
-      email address, click on 'Email' on main menu, screen like figure 2.3.1 will be displayed, put your email address on the it, and press the 'Save'
-      button to save it.
+      connection mode may be changed later to mode 0 or 3, then those SMS users without email address will not be able to login to the SMS server anymore.
+      To input or change your email address, click on 'Email' on main menu, screen like figure 2.3.1 will be displayed, put your email address on the it,
+      and press the 'Save' button to save it.
     </td>
   </tr>
   
