--- a/manual/change_group_name.html
+++ b/manual/change_group_name.html
@@ -28,9 +28,9 @@
 
   <tr>
     <td class=content>
-      To change name of a message group, select it from home page to enter the message group. When you enter the message group, click 'Setup' button on left upper corner, group
-      menu like figure 3.3.1 will be displayed. However, if you are not group administrator or system administrator, items under 'Group Administration' and
-      'Emergency' will be hidden for you.
+      To change name of a message group, enter this message group from the home page. After you enter the message group, click 'Setup' button on left upper corner, group
+      menu like figure 3.3.1 will be displayed. Note: If you are not group administrator or system administrator, items under 'Group Administration' and 'Emergency' will
+      be hidden for you.
     </td>
   </tr>
   
