--- a/manual/exit_message_group.html
+++ b/manual/exit_message_group.html
@@ -28,8 +28,8 @@
 
   <tr>
     <td class=content>
-      If you want to exit a message group, select item 'Exit Group' on group member, screen like figure 3.5.1 will be shown. Press 'OK' then you will be asked
-      to confirm your decision, press 'OK' again you will then exit the current message group and you will be returned to the home page of SMS.
+      If you want to exit a message group, select item 'Exit Group' on group menu (figure 3.3.1), screen like figure 3.5.1 will be shown. Press 'OK' then you will
+      be asked to confirm your decision, press 'OK' again you will exit the current message group, and you will be returned to the home page of messaging site.
     </td>
   </tr>
   
