--- a/manual/index.html
+++ b/manual/index.html
@@ -13,21 +13,21 @@
   </tr>
 
   <tr>
-    <td width=20 class=content>1.</td>
+    <td width=20 class=content valign=top>1.</td>
     <td class=content><b><a href="prepare_centos.html">Prepare CentOS 7 for SMS Server Installation</a></b></td>
   </tr>
   
   <tr><td colspan=2>&nbsp;</td></tr>
 
   <tr>
-    <td width=20 class=content>2.</td>
+    <td width=20 class=content valign=top>2.</td>
     <td class=content><b><a href="install_guide.html">SMS Server Installation Guide</a></b></td>
   </tr>
   
   <tr><td colspan=2>&nbsp;</td></tr>
 
   <tr>
-    <td width=20 class=content>3.</td>
+    <td width=20 class=content valign=top>3.</td>
     <td class=content><b><a href="user_guide.html">SMS User Guide</a></b></td>
   </tr>
   </table>
