--- a/manual/inform_group_member.html
+++ b/manual/inform_group_member.html
@@ -28,8 +28,8 @@
 
   <tr>
     <td class=content>
-      Usually, SMS will inform users as they have new messages. However, for security reason, only one email / Telegram message will be sent to those off-line
-      users no matter how many new messages they have. Under emergency situation, group administrator and system administrator can enforce to send out notification
+      Usually, SMS will inform off-line users as they have new messages. However, for security reason, only one email / Telegram message will be sent to those off-line
+      users, no matter how many new messages they have. Under emergency situation, group administrator and system administrator can enforce to send out notification
       email(s) / Telegram message(s) to urge off-line users to check their SMS messages.<br>
       <br>
       Select 'Inform Member' on group menu (figure 3.3.1), then screen like figure 3.10.1 will be displayed. In there, a default message 'You have important message,
