--- a/manual/login_flow.html
+++ b/manual/login_flow.html
@@ -35,7 +35,7 @@
   <tr><td>&nbsp;</td></tr>
   
   <tr>
-    <td align=center><a href="login_flow.png"><img src="login_flow.png" width=600></a><br>Figure 1.4.1</td>
+    <td align=center><a href="login_flow.png"><img src="login_flow.png" width=870></a><br>Figure 1.4.1</td>
   </tr>
   
   <tr><td>&nbsp;</td></tr>
@@ -132,15 +132,15 @@
       <tr>
         <td width=20px valign=top>3.</td>
         <td>
-          Once an user has marked 'unhappy', his/her account status should not be changed. i.e. 'Unhappy' user account should not be used again, even
-          for same user. Otherwise, alert will not be raised if he/she is 'unhappy' again. 
+          Once an user has marked 'unhappy', his/her account status should not be changed. i.e. 'Unhappy' user account should not be used again. Otherwise,
+          alert will not be triggered if he/she is 'unhappy' again. 
         </td>
       </tr>
       <tr>
         <td width=20px valign=top>4.</td>
         <td>
           If an 'unhappy' user is sole group administrator of one or some messsage groups, then a randomly selected system administrator will be added to
-          that message group/those message groups as group administrator.
+          that message group or those message groups as group administrator.
         </td>
       </tr>            
       </table>  
