--- a/manual/sec_vpn.html
+++ b/manual/sec_vpn.html
@@ -28,21 +28,21 @@
 
   <tr>
     <td class=content>
-      SMS provides a secure communication channel for users. However, between the users and the SMS server, there are four components users should take
-      great care to hide their trace from their enemies. They are secure connection, secure web browser, secure device, and secure email account. This
+      SMS provides a secure communication channel for users. However, between the users and the SMS server, there are four components that users should take
+      great care to hide their trace from their trackers. They are secure connection, secure web browser, secure device, and secure email account. This
       section is about how to make a secure connection from your device to the SMS server.<br>
       <br>
       As you may have already known that all the communication between the users and the SMS server is via SSL (i.e. https protocol), a quite secure way
       to use strong encryption method to protect your sent messages content, which avoid anyone to intercept your secret. Then why we still need an additional
       secure connection? The reason is that your counter part are not script kiddies, but a gang of state supported and well equipped professional hackers.
       Even your ISP will help them to monitor your cyber activities if they request for it. So, they may not get your messages content easily, but they can
-      certainly get your SMS sites DNS names (and then IP addresses) easily if you don't take further steps to hide them. Once they know your SMS sites, they
+      certainly get your SMS sites DNS names and IP address easily if you don't take further steps to hide them. Once they know your SMS sites, they
       can track all connected IP addresses to these sites. If SMS users don't connect to the SMS server with secure connections, their true identities can be
       uncovered by government agents. Therefore, secure connection serves two purposes, hide your SMS sites and true identity of SMS users, or at least protect
       SMS users even your enemies know your SMS sites.<br> 
       <br>
       There are three ways to build a secure connection. They are virtual private network (VPN), Tor browser (Tor network), and public available WiFi
-      connections. In general, public available WiFi hotspots are considered insecure, why they can be used in here? Because 'secure' in here also means
+      connections. In general, public available WiFi hotspots are considered insecure, then why can they be used? Because 'secure' in here also means
       anonymity.<br>
       <br>
       <b><u>Virtual Private Network (VPN)</u></b><br>
@@ -72,8 +72,8 @@
       </table>
       <br>
       For free VPN service, I recommend <a href="https://www.vpngate.net">VPN Gate</a>. It is developed by University of Tsukuba, Japan. Please note that
-      all VPN servers provided by VPN Gate come from volunteers, and some of them are located into the territory of dictatorial regime like China, you
-      should avoid to use those VPN servers. Table 5.1.1 shows you the brief steps to install and use VPN Gate service on varied platforms. <br>
+      all VPN servers provided by VPN Gate come from volunteers, and some of them are located into the territory of dictatorial regime like China and Russia,
+      you should avoid those VPN servers. Table 5.1.1 shows you the brief steps to install and use VPN Gate service on varied platforms. <br>
       <br>
       <table width=100% cellspacing=1 cellpedding=1 border=1>
       <tr style="background-color:lightblue">
@@ -196,7 +196,7 @@
       </tr>
       </table>
       <br>
-      Besides web surfing, if you want to use Tor network to protect all your internet activities, you should turn to use Whonix. Whonix is two VirtualBox virtual
+      Besides web surfing, if you want to use Tor network to protect all your internet activities, you may turn to use Whonix. Whonix is two VirtualBox virtual
       machines built on Debian Linux. One is called 'gateway', another one is called 'workstation'. 'Gateway' has two network interfaces, one of the network
       interfaces is used to connect to the Tor network, another network interface is used locally for 'workstation'. All internet connection from the 'workstation'
       must go through the 'gateway'. Therefore, all internet activities on the 'workstation' is protected by the Tor network. Since Whonix must be run on VirtualBox, so
@@ -214,7 +214,7 @@
       Public available WiFi hotspot is usually an insecure place (see <a href="https://thevpn.guru/public-wifi-hotspot-threat-privacy">this article</a> for details).
       However, if you take all the precautions, you could still keep yourself anonymity and safety.<br>
       <br>
-      Although public WiFi hotspot can't expose your true identity directly, your trackers still have many ways to correlate some indirect data to identify yourself.
+      Although public WiFi hotspot can't expose your true identity directly, your trackers still have many ways to correlate indirect data to identify yourself.
       For example, coffee cafes usually provide public WiFi access, and those places also commonly have CCTV monitoring. Your face on CCTV timeline, and internet
       activities log on the public WiFi router, could let secret police narrow down who is the right person they target. Therefore, the following tips are for you as
       using public WiFi hotspot: <br>
