--- a/manual/sec_your_device.html
+++ b/manual/sec_your_device.html
@@ -40,11 +40,11 @@
       Secondly, let's consider the best practice on device usage and web browser usage on different SMS connection modes (see section 1.2 Four connection modes of SMS).
       If you use connection mode 0 or 3, you will login on decoy site and switch to decoy site afterward, you need to read your email to get messaging site access link
       to go to messaging site. Therefore, the best practice is to separate these operations on two different smartphones. Let say phone A and phone B. i.e. You login SMS
-      with phone A, then use phone B to read the access email and go to the messaging site. However, carrying two phones may be inconvenient or impossible, then you should
+      with phone A, then use phone B to read the access email and go to the messaging site. However, carrying two phones may be inconvenient or impossible, but you should
       still separate operations on two different web browsers. Let say you use Google Chrome to login to the decoy site of your SMS server, then use Firefox to access your
-      email and switch to the messaging site. For connection mode 1 and 2, please use Firefox to access the decoy site and the messaging site.<br>
+      email and switch to the messaging site. For connection mode 1 and 2, please use Firefox to access both the decoy site and the messaging site.<br>
       <br>
-      Now, you should determine to how to select a secure smartphone. Below is a guideline about it:<br>
+      Now, you should determine how to select a secure smartphone. Below is a guideline about it:<br>
       <br>
       <table width=100% cellspacing=1 cellpedding=1>
       <tr>
@@ -93,7 +93,7 @@
         <td width=10px valign=top>2.</td>
         <td>
           Don't use biometric methods to unlock your smartphone, such as fingerprint or facial recognition. Always use long pin number, password or complicated
-          pattern. The reason is obvious, then your phone can't be unlocked without your cooperation. 
+          pattern. The reason is obvious, your phone can't be unlocked without your cooperation. 
         </td>
       </tr>
 
@@ -123,11 +123,10 @@
       <tr>
         <td width=10px valign=top>5.</td>
         <td>
-          State supported hackers have so many hacking methods to against you, some even out of your imaginations like sci-fi stories. So, just install those
-          applications you really need and no extra application(s) on your secret phone. More applications means more chance to get vulnerabilities which could be used by
-          hackers.<br>
+          State supported hackers have many hacking methods to against you, some even out of your imaginations like Sci-Fi stories. So, just install those applications you
+          really need and no extra application(s) on your secret phone. More applications means more chance to get vulnerabilities which could be used by hackers.<br>
           <br>
-          Beware the built-in 'Messages' application of your phone to receive SMS messages (<font color="blue">SMS in here means Short Message Service, not Secret Messaging
+          Beware the built-in 'Messages' application of your phone to receive SMS messages (<font color="darkblue">SMS in here means Short Message Service, not Secret Messaging
           System</font>), it is the most favour way hackers used to infiltrate into your phone. You should turn off all automatic previews options of SMS messages, and disable
           MMS auto-download. If you get a suspicious SMS message, don't open it, delete it at once.<br>
           <br>
