--- a/manual/set_telegram_id.html
+++ b/manual/set_telegram_id.html
@@ -34,8 +34,8 @@
       them due to security reason (see section 5.4 secure your email account).<br>
       <br>
       As you decide to use Telegram to help you, please make sure it won't bring you into trouble. That means you must make sure: (1) Telegram is legally
-      used in your country, (2) Telegram installed in your device won't let you look suspicious by government agents, and (3) Telegram is not blocked by
-      your local government. If anything is in doubt, don't use it.<br>
+      used in your country, and (2) Telegram installed in your device won't let you look suspicious by government agents. If anything is in doubt, don't use
+      it.<br>
       <br>
       To let Telegram be your SMS notification worker, it has two steps setup to do (as figure 2.4.1 shown).  
     </td>
