--- a/manual/sys_demote_user.html
+++ b/manual/sys_demote_user.html
@@ -31,10 +31,10 @@
       If you are system administrator, you have right to demote trusted user to common user or demote system administrator to trusted user or common user.<br>
       <br>
       Under main menu (figure 2.1.2), select item 'Demote user', then screen like figure 4.3.1 will be seen, which let you desire to demote user to common user
-      or trusted user, then click the 'Next' button. Figure 4.3.2 will be shown to let you select appropriated user(s) for demotion. Select the check-box in
+      or trusted user, then click the 'Next' button. Figure 4.3.2 will be shown to let you select appropriate user(s) for demotion. Select the check-box in
       front of desired user's alias, and then click 'Save' button to demote selected user(s).<br>
       <br>
-      Please note that only appropriated users will be listed on figure 4.3.2. Therefore, if it has no any appropriated user available, the user list will
+      Please note that only appropriate users will be listed on figure 4.3.2. Therefore, if it has no any appropriate user available, the user list will
       be empty.
     </td>
   </tr>
