--- a/manual/sys_lock_user.html
+++ b/manual/sys_lock_user.html
@@ -59,7 +59,7 @@
       Similarly, if you want to unlock a locked user, select 'Unlock User' radio button on figure 4.4.1, and select desired locked user(s) on figure 4.4.2,
       and click 'Save' button to unlock user(s).<br>
       <br>
-      Please note that only appropriated users will be listed on figure 4.4.2. Therefore, if it has no any appropriated user available, the user list will
+      Please note that only appropriate users will be listed on figure 4.4.2. Therefore, if it has no any appropriate user available, the user list will
       be empty.
     </td>
   </tr>  
