--- a/manual/sys_telegram_bot.html
+++ b/manual/sys_telegram_bot.html
@@ -28,7 +28,7 @@
 
   <tr>
     <td class=content>
-      Still remember section "2.4 Let Telegram help"? If you need notification service provided by Telegram instant messaging system, you need to apply a
+      Do you still remember section "2.4 Let Telegram help"? If you need notification service provided by Telegram instant messaging system, you need to apply a
       Telegram bot from Telegram "Bot Father". I am not intend to show you the detail steps to apply a Telegram bot, it is out of scope of this guide. If
       you don't know how to apply a new Telegram bot, just click the link "Bots: An Introduction for Developers" on figure 4.5.6.1 to get detail information.<br>
       <br>
