--- a/manual/main_menu.html
+++ b/manual/main_menu.html
@@ -30,11 +30,25 @@
     <td class=content>
       When you are login to the SMS successfully, if you have already been member of at least one message group, your message  
       group list will be displayed (like figure 2.1.1 shown). Otherwise, message group adding page will be shown for you to let
-      you create your first message group.<br>
-      <br>
+      you create your first message group.
+    </td>
+  </tr>  
+      
+  <tr><td>&nbsp;</td></tr>
+
+  <tr>
+    <td align=center valign=top class=content>
+      <a href="msg_groups.jpg"><img src='msg_groups.jpg' width=600></a><br>Figure 2.1.1<br>
+    </td>    
+  </tr>
+
+  <tr><td>&nbsp;</td></tr>
+      
+  <tr>
+    <td class=content>      
       Click on 'Setup' button on right top corner, SMS main menu will be shown (figures 2.1.2 and 2.1.3). Please note that if 
-      you are common user or trusted user, only items 'Alias', 'Email', 'Telegram ID' (it will be hidden if Telegram bot does
-      not exist, see section 4.5.6 Telegram bot for details), 'Happy Password', 'Unhappy Password', 'Add Group' and 'Add Private Group'
+      you are common user or trusted user, only items 'Alias', 'Email', 'Telegram ID' (it will be shown if Telegram bot has already
+      existed, see section 4.5.6 Telegram bot for details), 'Happy Password', 'Unhappy Password', 'Add Group' and 'Add Private Group'
       will be seen, the other items are exclusively used by SMS administrative users and will be hidden from common users and trusted
       users.
     </td>
@@ -44,8 +58,6 @@
   
   <tr>
     <td align=center valign=top class=content>
-      <a href="msg_groups.jpg"><img src='msg_groups.jpg' width=600></a><br>Figure 2.1.1<br>
-      <br>
       <a href="setup_menu_1.jpg"><img src='setup_menu_1.jpg' width=600></a><br>Figure 2.1.2<br>
       <br>
       <a href="setup_menu_2.jpg"><img src='setup_menu_2.jpg' width=600></a><br>Figure 2.1.3
