--- a/manual/prepare_centos.html
+++ b/manual/prepare_centos.html
@@ -19,22 +19,26 @@
   
   <tr>
     <td></td>
-    <td>- Intel i5 2.5Ghz CPU</td>
-  </tr>
-  
-  <tr>
-    <td></td>
-    <td>- 2GB RAM</td>
-  </tr>
-  
-  <tr>
-    <td></td>
-    <td>- 100GB free space (for 50 active users)</td>
-  </tr>
-
-  <tr>
-    <td></td>
-    <td>- 1Mb/s internet connection (fixed or dynamic IP address)</td>
+    <td>
+      <table width=100% class=table cellspacing=1 cellpadding=1>
+      <tr>
+        <td valign=top> - </td>
+        <td>Intel i5 2.5Ghz CPU</td>
+      </tr>
+      <tr>
+        <td valign=top> - </td>
+        <td>2GB RAM</td>
+      </tr>
+      <tr>
+        <td valign=top> - </td>
+        <td>100GB free space (for 50 active users)</td>
+      </tr>
+      <tr>
+        <td valign=top> - </td>
+        <td>1Mb/s internet connection (fixed or dynamic IP address)</td>
+      </tr>      
+      </table>  
+    </td>
   </tr>
   
   <tr><td colspan=2>&nbsp;</td></tr>
@@ -46,7 +50,7 @@
   
   <tr>
     <td></td>
-    <td>Select 'Install CentOS 7' option and press enter</td>
+    <td>Boot up the system with CentOS 7 installation media, select option 'Install CentOS 7' and press enter.</td>
   </tr>
   
   <tr>
@@ -55,7 +59,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="install_centos7.png"><img src='install_centos7.png' width=650></a><br>Figure 1    
+          <a href="install_centos7.png"><img src='install_centos7.png' width=870></a><br>Figure 1    
         </td>
       </tr>  
       </table>
@@ -67,8 +71,8 @@
   <tr>
     <td></td>
     <td>
-      After select your desired language, then setup page 'INSTALLATION SUMMARY' will be displayed. You should cast your
-      server here by selecting system time zone, input network connection parameters, configure hard disk partitions, etc. 
+      After select your desired language, setup page 'INSTALLATION SUMMARY' will be displayed. You should configure your
+      server here by selecting system time zone, input network connection parameters, define hard disk partitions, etc. 
     </td>
   </tr>
   
@@ -78,7 +82,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="installation_summary.png"><img src='installation_summary.png' width=650></a><br>Figure 2    
+          <a href="installation_summary.png"><img src='installation_summary.png' width=870></a><br>Figure 2    
         </td>
       </tr>  
       </table>
@@ -92,7 +96,7 @@
     <td>
       Configure network settings, select 'NETWORK & HOST NAME'. Then click 'Configure...' button, and then 
       select 'IPv4 Settings' and click 'Add' button. Input network settings of your server, and turn on the network
-      connection afterward.
+      connection after save your network settings.
     </td>
   </tr>
   
@@ -102,7 +106,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="manual_input_ip_address.png"><img src='manual_input_ip_address.png' width=650></a><br>Figure 3    
+          <a href="manual_input_ip_address.png"><img src='manual_input_ip_address.png' width=870></a><br>Figure 3    
         </td>
       </tr>  
       </table>
@@ -127,7 +131,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="time_zone_setup.png"><img src='time_zone_setup.png' width=650></a><br>Figure 4    
+          <a href="time_zone_setup.png"><img src='time_zone_setup.png' width=870></a><br>Figure 4    
         </td>
       </tr>  
       </table>
@@ -152,7 +156,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="manual_config_disk.png"><img src='manual_config_disk.png' width=650></a><br>Figure 5    
+          <a href="manual_config_disk.png"><img src='manual_config_disk.png' width=870></a><br>Figure 5    
         </td>
       </tr>  
       </table>
@@ -167,7 +171,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="configure_disk_partition.png"><img src='configure_disk_partition.png' width=650></a><br>Figure 6    
+          <a href="configure_disk_partition.png"><img src='configure_disk_partition.png' width=870></a><br>Figure 6    
         </td>
       </tr>  
       </table>
@@ -194,7 +198,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="setup_root_password.png"><img src='setup_root_password.png' width=650></a><br>Figure 7    
+          <a href="setup_root_password.png"><img src='setup_root_password.png' width=870></a><br>Figure 7    
         </td>
       </tr>  
       </table>
@@ -209,7 +213,7 @@
       <table class=table>
       <tr>
         <td align=center>
-          <a href="create_another_user.png"><img src='create_another_user.png' width=650></a><br>Figure 8    
+          <a href="create_another_user.png"><img src='create_another_user.png' width=870></a><br>Figure 8    
         </td>
       </tr>  
       </table>
@@ -221,10 +225,10 @@
   <tr>
     <td></td>
     <td>
-      After CentOS 7 installation is completed, reboot the system. Then two things must be done immediately to
+      After CentOS 7 installation is completed, you should reboot the system, and then two things must be done immediately to
       harden the system security: (1) disable root login via ssh, (2) patch the system to the most updated level.<br>
       <br>
-      For (1), modify the ssh configuration file "/etc/ssh/sshd_config", and uncomment the option "PermitRootLogin yes"
+      For (1), modify the ssh configuration file "/etc/ssh/sshd_config", and uncomment the line "PermitRootLogin yes"
       and change it to "PermitRootLogin no". Then, save the change and restart the sshd service:<br>
       <br>
       <b>systemctl restart sshd.service</b><br>
@@ -233,7 +237,7 @@
       <br>
       <b>yum update</b><br>
       <br>
-      Now, the system is well prepared for SMS installation. Reboot the system to ensure all most updated patches loaded.
+      Now, the system is well prepared for SMS installation. Reboot the system again to ensure all most updated patches loaded.
     </td>
   </tr>
   
