--- a/manual/sys_destroy_system.html
+++ b/manual/sys_destroy_system.html
@@ -30,10 +30,10 @@
     <td class=content>
       Under the most emergency situation, you have a quick way to wipe out all messages and uploaded files.<br>
       <br>
-      Select item 'Destroy System' on main menu (figure 2.1.3), then a pop-up dialog box will appear like figure 4.6.1, click on the 'OK' button, then another
-      pop-up dialog box will show up for your final decision. If you also click the 'OK' button on this pop-up dialog box, then SMS will delete all messages
-      and uploaded files. This process is not reversible, so just give this right to the hands of reliable and trustable persons. i.e. The person who act as
-      SMS system administrator must be reliable and trustable.
+      Select item 'Destroy System' on main menu (figure 2.1.3), then a pop-up dialog box will appear like figure 4.6.1, click on the 'OK' button, another
+      pop-up dialog box will show up for your final decision. If you also click the 'OK' button on this pop-up dialog box, SMS will delete all data and
+      uploaded files. This process is not reversible, so just give this right in the hands of reliable and trustable persons. i.e. SMS system administrator
+      must be a reliable and trustable person.
     </td>
   </tr>
 
