--- a/manual/sys_filetypes.html
+++ b/manual/sys_filetypes.html
@@ -34,8 +34,8 @@
       Image files handling is very simple, all images files will be displayed on SMS with a much lower resolution version, click on the images will bring up the
       full resolution image file. Recognised audio and video files will be put on HTML5 multimedia object, which can play audio or video files on web page directly.
       'aud_convertable' file type means an uploaded audio file can be converted to OGG audio file, so that audio file converter FFmpeg will handle it automatically
-      for you (provided that you have installed this optional software). Please note that not all platforms can handle audio and/or video file flawlessly. For
-      example, iPhone and iPad are the worst platforms to handle web based multimedia files, many commonly used multimedia file types can't be played properly
+      for you (provided that you have installed this optional software). Please note that no platform can handle all audio and/or video files flawlessly. For
+      example, iPhone and iPad are the worst platforms to handle web based multimedia files, many commonly used multimedia file types can't be handled properly 
       on iOS web browsers.<br> 
       <br>
       To maintain file types, select item 'System Settings' on main menu (figure 2.1.3), then click on the button 'File Types' (figure 4.5.1.1), screen
@@ -54,8 +54,9 @@
   <tr>
     <td class=content>
      If you want to defind a new file type, click the button 'Add File Type' on figure 4.5.4.1, screen like figure 4.5.4.2 will be seen. You could input
-     file extension and file type on it. You can select existing file type on the drop down list, or input your new file type. Then, click on 'Save' button
-     to add a new file type. You will be switched back to the file type list, and your newly added file type will be shown on the list. 
+     file extension and file type on it. For existing file types, you can select from the drop down list, or you could input your new file type. Then,
+     click on 'Save' button to add a new file type. You will be switched back to the file type list, and your newly added file type will be shown on the
+     list. 
     </td>
   </tr>  
 
