--- a/manual/sys_main_sites.html
+++ b/manual/sys_main_sites.html
@@ -37,7 +37,7 @@
       On figure 4.5.1.2, the first input field is for login (decoy) site DNS name, and the second input field is for the protected messaging site DNS name.
       If you want to change anyone of them, just input the most updated DNS name to appropriated field, and press the 'Save' button to update them. These
       DNS names are also related to the web server virtual hosts settings and then the SSL certificates. Therefore, if you change anyone of them, you need
-      to amend web server settings accordingly, and then apply newly created SSL certificate(s) for amended virtual hosts. 
+      to amend web server settings accordingly, and then apply new SSL certificate(s) for amended virtual host(s). 
     </td>
   </tr>
 
