--- a/manual/sys_misc_settings.html
+++ b/manual/sys_misc_settings.html
@@ -28,7 +28,7 @@
 
   <tr>
     <td class=content>
-      There are six configurable misc. system settings. Details are as below:<br> 
+      There are six configurable miscellaneous system settings. Details are as below:<br> 
       <br>
       <table width=100% cellpadding=1 cellspacing=1 border=1 class=table>
       <tr style="background-color:lightblue">
@@ -82,8 +82,8 @@
       </tr>
       </table>
       <br>
-      To maintain misc. system settings, select item 'System Settings' on main menu (figure 2.1.3), then click on the button 'Misc. System Settings' (figure 4.5.1.1),
-      screen like figure 4.5.5.1 will be displayed to show you the list of defined misc. system settings.
+      To maintain miscellaneous system settings, select item 'System Settings' on main menu (figure 2.1.3), then click on the button 'Misc. System Settings' (figure 4.5.1.1),
+      screen like figure 4.5.5.1 will be displayed to show you the list of defined miscellaneous system settings.
     </td>
   </tr>
 
@@ -97,10 +97,11 @@
 
   <tr>
     <td class=content>
-     If you want to defind a new misc. system setting, click the button 'Add System Setting' on figure 4.5.5.1, screen like figure 4.5.5.2 will be seen.
-     You could input key and value of the new misc. system setting. Then, click on 'Save' button to add a new misc. system setting. You will be switched
-     back to the misc. system setting list, and your newly added misc. system setting will be shown on the list. Note: Since all misc. system settings are
-     related to SMS programming, so you are seldom to add a new misc. system setting, except to recreate a misc. system setting which is deleted accidentally.
+     If you want to defind a new miscellaneous system setting, click the button 'Add System Setting' on figure 4.5.5.1, screen like figure 4.5.5.2 will be seen.
+     You could input key and value of the new miscellaneous system setting. Then, click on 'Save' button to add a new miscellaneous system setting. You will be
+     switched back to the miscellaneous system setting list, and your newly added miscellaneous system setting will be shown on the list. Note: Since all miscellaneous
+     system settings are related to SMS programming, so you are seldom to add a new miscellaneous system setting, except to recreate a miscellaneous system
+     setting which is deleted accidentally.
     </td>
   </tr>  
 
@@ -114,11 +115,12 @@
 
   <tr>
     <td class=content>
-      To modify a misc. system setting, click on it's key or value on the list, then screen like figure 4.5.5.3 will be displayed. Details of selected
-      misc. system setting will be shown, just modify it's data, and clicking the 'Save' button will update the selected misc. system setting.<br>
+      To modify a miscellaneous system setting, click on it's key or value on the list, then screen like figure 4.5.5.3 will be displayed. Details of selected
+      miscellaneous system setting will be shown, just modify it's data, and clicking the 'Save' button will update the selected miscellaneous system setting.<br>
       <br>
-      To delete a misc. system setting, click cross icon on the 'Delete' column of selected misc. system setting in the list (figure 4.5.5.1), a dialog
-      box will show up for you to confirm the misc. system setting deletion. Clicking on 'OK' button will remove the selected misc. system setting.
+      To delete a miscellaneous system setting, click cross icon on the 'Delete' column of selected miscellaneous system setting in the list (figure 4.5.5.1),
+      a dialog box will show up for you to confirm the miscellaneous system setting deletion. Clicking on 'OK' button will remove the selected miscellaneous
+      system setting.
     </td>
   </tr> 
 
