--- a/manual/user_join_flow.html
+++ b/manual/user_join_flow.html
@@ -30,21 +30,23 @@
     <td class=content>
       There are 3 types of SMS users: common users, trusted users and system administrators.<br>
       <br>
-      Common users can do every stuffs of messaging, such as create a message group, manage message groups belongs to them, send and receive messages, etc.
-      Trusted users not only can do all the things common users do, but also they can bring in new SMS users. System administrators have full power on SMS
-      system. Besides of messaging stuffs and bring in new users, they can perform more administrative tasks such as promoting user, demoting user, lock/unlock
-      user account, modifying system parameters, and even have right to destroy the entire system.<br>
+      Common users can do every stuffs of messaging, such as create a message group, manage message groups belongs to them, send and receive messages, etc.<br>
       <br>
-      Common user must be brought in by trusted user or system administrator. i.e. All SMS users must have a referrer to join in except the built in system
-      administrator 'smsadmin'. <b>Note:</b> Default happy password and unhappy password of 'smsadmin' are 'iamhappy' and 'iamunhappy' respectively. Therefore,
-      when the first time user 'smsadmin' login, please change your passwords at once. Otherwise, you will put your SMS server at risk.<br>
+      Trusted users not only can do all the things common users do, but also they can bring in new SMS users.<br>
+      <br>
+      System administrators have full power on SMS system. Besides of messaging stuffs and bring in new users, they can perform more administrative tasks
+      such as promoting user, demoting user, lock/unlock user account, modifying system parameters, and even have right to destroy the entire system.<br>
+      <br>
+      Common user must be brought in by trusted user or system administrator. i.e. Every SMS user must go through a referrer to join in except the built in
+      system administrator 'smsadmin'. <b>Note:</b> Default happy password and unhappy password of 'smsadmin' are 'iamhappy' and 'iamunhappy' respectively.
+      Please change passwords of 'smsadmin' at first login. Otherwise, you will put your SMS server at risk.<br>
       <br>
       There are two ways to bring in new users: (1) let them join in or (2) you create their accounts manually. Method (1) is used for connection mode 0 and
       connection mode 2, and method (2) is used for connection mode 1 and connection mode 3.<br>
       <br>
       If you select connection mode 0 or connection mode 2, when you type in the URL of your decoy site, screen similar figure 1.3.1 will be seen. In there,
       you will see a hyperlink 'Join Us'. However, this hyperlink will be hidden for connection mode 1 and 3, you need to create user manually and pass the
-      user account details to the user by another way.
+      user account details to the user via another secure way.
     </td>
   </tr>
     
@@ -87,13 +89,13 @@
   <tr>
     <td class=content>
       Your registration request will be sent to your referrer by email, and your referrer will decide to accept or reject your registration request.
-      If your are accepted, an email will be sent to you, in there will contain a access link, click on this link, you will be directed to a web page
+      If you are accepted, an email will be sent to you, and contains a hyperlink. Clicking on this hyperlink, you will be directed to a web page
       like figure 1.3.4 (figure 1.3.5 is the lower part of the same page) to create your user account.<br>
       <br>
       You need to input your desired username, alias, happy password and unhappy password. You may accept the system suggested username or give your
       desired username. As remarks shown on figure 1.3.5, happy password is used to login to the system under normal circumstances. However, if you
-      are in danger and you are forced to login to the SMS, you should use unhappy password for it. For details of SMS login, please refer to section
-      1.4 How to login.<br>
+      are in danger and you are forced to login to the SMS, you should use unhappy password. For details of SMS login, please refer to section 1.4
+      How to login.<br>
       <br>
       <b>Note:</b><br>
       Referrer has 3 days to decide whether accept of reject applicant's registration request, and accepted applicant has 4 days to create his/her
